update spacing and color of buttons

--- a/Portfolio/app/src/main/res/layout/activity_portfolio.xml
+++ b/Portfolio/app/src/main/res/layout/activity_portfolio.xml
@@ -26,36 +26,50 @@
             android:id="@+id/scoresApp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#F08C35"
             android:text="@string/spotify_title" />
 
         <Button
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+
             android:id="@+id/scoresAppButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#F08C35"
             android:text="@string/scores_title" />
 
         <Button
             android:id="@+id/libraryAppButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#F08C35"
             android:text="@string/library_title" />
 
         <Button
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+
             android:id="@+id/buildBiggerButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#F08C35"
             android:text="@string/build_bigger_title" />
 
         <Button
             android:id="@+id/xyzBaconReaderButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#F08C35"
             android:text="@string/xyz_title" />
 
         <Button
+            android:layout_marginTop="10dp"
+
             android:id="@+id/myOwnAppButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#AE4021"
             android:text="@string/capstone_title" />
     </LinearLayout>
 
