--- a/Portfolio/app/src/main/res/layout/activity_portfolio.xml
+++ b/Portfolio/app/src/main/res/layout/activity_portfolio.xml
@@ -26,7 +26,7 @@
             android:id="@+id/spotifyButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#F08C35"
+            android:background="@color/orange"
             android:text="@string/spotify_title" />
 
         <Button
@@ -60,7 +60,7 @@
             android:id="@+id/xyzButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#F08C35"
+            android:background="@color/orange"
             android:text="@string/xyz_title" />
 
         <Button
