--- a/Portfolio/app/src/main/res/values/styles.xml
+++ b/Portfolio/app/src/main/res/values/styles.xml
@@ -4,5 +4,20 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
     </style>
+    
+    <style name="udacity_projects">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/orange</item>
+    </style>
+
+    <style name="udacity_projects_padding">
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/orange</item>
+    </style>
+
 
 </resources>
