--- a/SpotifyStreamer/app/src/main/res/layout/artist_view.xml
+++ b/SpotifyStreamer/app/src/main/res/layout/artist_view.xml
@@ -1,19 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ekeitho.spotify.artist.ArtistView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/artist_image"
-        android:padding="16dp"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
-
-    <TextView
-        android:id="@+id/artist_name"
-        android:textAlignment="center"
-        android:layout_width="match_parent"
-        android:layout_height="100dp" />
-
-</LinearLayout>
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+</com.ekeitho.spotify.artist.ArtistView>
