--- a/SpotifyStreamer/app/src/main/res/layout/activity_spotify.xml
+++ b/SpotifyStreamer/app/src/main/res/layout/activity_spotify.xml
@@ -5,7 +5,7 @@
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/fragment"
+        android:id="@+id/artist_search_fragment"
         android:name="com.ekeitho.spotify.artist.ArtistSearchFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
