--- a/Portfolio/app/src/main/res/layout/activity_portfolio.xml
+++ b/Portfolio/app/src/main/res/layout/activity_portfolio.xml
@@ -49,6 +49,7 @@
             />
 
         <Button
+            android:onClick="displayToast"
             android:layout_marginTop="10dp"
             android:padding="16dp"
             android:id="@+id/myOwnAppButton"
