--- a/Portfolio/app/src/main/res/values/styles.xml
+++ b/Portfolio/app/src/main/res/values/styles.xml
@@ -3,9 +3,12 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:actionBarStyle">@color/red</item>
     </style>
+
     
     <style name="udacity_projects">
+        <item name="android:onClick">displayToast</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@color/orange</item>
