--- a/SpotifyStreamer/app/src/main/res/layout/activity_spotify.xml
+++ b/SpotifyStreamer/app/src/main/res/layout/activity_spotify.xml
@@ -1,14 +1,9 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/search_fragment_layout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/artist_search_fragment"
-        android:name="com.ekeitho.spotify.artist.ArtistSearchFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/artist_search_view" />
+    <!-- dynamically adding the fragment -->
 
-</LinearLayout>
+</FrameLayout>
