--- a/SpotifyStreamer/app/src/main/res/layout/top10_view.xml
+++ b/SpotifyStreamer/app/src/main/res/layout/top10_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/top10_song_found"
+        android:id="@+id/top10_song_found_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
