--- a/SpotifyStreamer/app/src/main/res/layout-large/activity_spotify.xml
+++ b/SpotifyStreamer/app/src/main/res/layout-large/activity_spotify.xml
@@ -1,9 +1,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/search_fragment_layout_large"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:weightSum="10"
+    android:orientation="horizontal">
 
+    <FrameLayout
+        android:layout_weight="3"
+        android:id="@+id/search_fragment_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_weight="7"
+        android:id="@+id/top10_fragment_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+    </FrameLayout>
 
 </LinearLayout>
 
