--- a/SpotifyStreamer/app/src/main/res/layout-large/activity_spotify.xml
+++ b/SpotifyStreamer/app/src/main/res/layout-large/activity_spotify.xml
@@ -1,21 +1,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:weightSum="10"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:baselineAligned="false"
+    android:divider="?android:attr/dividerHorizontal"
+    android:showDividers="middle"
     android:orientation="horizontal">
 
     <FrameLayout
-        android:layout_weight="3"
         android:id="@+id/search_fragment_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="3">
     </FrameLayout>
 
     <FrameLayout
-        android:layout_weight="7"
         android:id="@+id/top10_fragment_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="5">
     </FrameLayout>
 
 </LinearLayout>
