--- a/FinalProject/app/src/paid/res/layout/fragment_main.xml
+++ b/FinalProject/app/src/paid/res/layout/fragment_main.xml
@@ -15,24 +15,23 @@
         />
 
     <Button
+        android:id="@+id/jokeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/instructions_text_view"
         android:text="@string/button_text"
         android:onClick="tellJoke"
-
         />
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
+    <ProgressBar
         android:visibility="gone"
+        android:layout_below="@id/jokeButton"
+        android:layout_centerInParent="true"
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id">
-    </com.google.android.gms.ads.AdView>
+        android:progressDrawable="@drawable/circular_progress_bar" />
 
 
 </RelativeLayout>
